add post create challenge
